# balance

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: workflow.yml
doc/: IR.md  codestyle.md
src/: CMakeLists.txt
src/AST/: Ast.h  AstDotDumper.h  AstDumper.h  Node.h  OpNames.h  Visitor.h
src/Frontend/: Driver.h
src/Grammar/: lexer.ll  parser.yy
src/IR/: BasicBlock.h  CMakeLists.txt  Function.h  IR.cpp  IR.h  Instruction.cpp  Instruction.h  Operand.h
src/MachineLayer/: CMakeLists.txt  CodeGen.cpp  LiveRanges.cpp  LiveRanges.h  MIROpcodes.cpp  MIROpcodes.h  MachineBB.cpp  MachineBB.h  MachineFunction.cpp  MachineFunction.h  MachineInst.cpp  MachineInst.h  MachineOperand.cpp  MachineOperand.h  PassManager.cpp  PassManager.h  RPOTraversal.cpp  RPOTraversal.h  Register.cpp  Register.h  TargetMachine.h
src/MachineLayer/Analysis/: CMakeLists.txt  DomTree.cpp  DomTree.h  Liveness.cpp  Liveness.h  RPOTraversal.cpp  RPOTraversal.h
src/MachineLayer/MIRPasses/: CMakeLists.txt  DCE.cpp  DCE.h  LinearScanRAL.cpp  LinearScanRAL.h  LivenessAnalysis.cpp  LivenessAnalysis.h  Pass.h  PhiElimination.cpp  PhiElimination.h  VerifierPass.cpp  VerifierPass.h
src/RISCV/: CMakeLists.txt  RISCVRegisters.h
src/Traversals/: CMakeLists.txt
src/UniversalAnalysis/: CMakeLists.txt  DomFrontier.cpp  DomFrontier.h  DomTree.cpp  DomTree.h  RPOTraversal.cpp  RPOTraversal.h
src/Utils/: CMakeLists.txt  Utils.cpp  Utils.h
tests/: CMakeLists.txt  FrontendTests.cpp
tests/data/: decl_arrays.ans  decl_arrays.sy  decl_const_scalar.ans  decl_const_scalar.sy  decl_init_lists.ans  decl_init_lists.sy  decl_multi_def.ans  decl_multi_def.sy  decl_var_simple.ans  decl_var_simple.sy  expr_array_indexing.ans  expr_array_indexing.sy  expr_logical.ans  expr_logical.sy  expr_precedence.ans  expr_precedence.sy  expr_unary.ans  expr_unary.sy  func_array_params.ans  func_array_params.sy  func_calls.ans  func_calls.sy  func_params.ans  func_params.sy  func_void_no_params.ans  func_void_no_params.sy  lex_comments.ans  lex_comments.sy  lex_empty_file.sy  lex_numbers.ans  lex_numbers.sy  neg_bad_character.sy  neg_const_without_init.sy  neg_missing_semicolon.sy  neg_unterminated_comment.sy  stmt_break_continue.ans  stmt_break_continue.sy  stmt_dangling_else.ans  stmt_dangling_else.sy  stmt_if_else.ans  (+5 more)
